required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- OWS requests should be completely blocked by default (#3755)

- SLD: check for limit on dash arrays (#3772)

- WMS: Apply sld after bbox and srs have been parsed (#3765)

Version 6.0.0-beta3 (2011-03-23)
--------------------------------

- apply min/max size/width style values to polygon spacing (vaguely related 
  to #3132)

- assure that a created tile has a non-zero width and height (#3370)

- use png_sig_cmp instead of png_check_sig (#3762)

- Rendering: scale style OFFSET and GAP the same way we scale other style 
  attributes. Beforehand, we scaled them proportionaly to the computed width.

- KML: fix rounding problem for point feautres (#3767)

- KML: update code to reflect output changes. Fix true type symbols. (#3766)

- SLD: Text Symbolizer now uses the new expression syntax (#3757)

- WFS: correct bbox values for GetFeature with featureid request (#3761) 

- Mapscript Seg Fault on mapObj->getMetaData (#3738)

- Correct double free in msCleanup().

- Initialize default formats in WCS.

- Fix csharp Makefile.in (#3758)

- Allow run-time subs in class->text (makes sense if you allow it in 
  class->expression).

- Fix build problem when --enable-cgi-cl-debug-args is enabled (#2853)

Version 6.0.0-beta2 (2011-03-18)
--------------------------------

- correct scaling of symbol GAP and PATTERN (#3752)

- remove references to SWF/MING

- CGI runtime substitution requires a validation pattern (was optional 
  before) (#3522)

- add a default png8 outputformat that uses AGG/PNG with quantization

- change MS_INIT_COLOR to take alpha as a parameter
